crates/slotted-test/tests/snapshots/settings__settings_tree_glass.snap
---
source: crates/slotted-test/tests/settings.rs
expression: h.screen_tree()
---
ScreenTree(
  roots: [
    TreeNode(
      role: Screen,
      screen: Some("demo:settings"),
      visible: true,
      children: [
        TreeNode(
          role: Panel,
          test_id: Some("settings"),
          tags: {
            "test_id": "settings",
          },
          widget: Some("slotted:panel"),
          visible: true,
          children: [
            TreeNode(
              role: Text,
              label: Some("slotted.menu.settings_title"),
              test_id: Some("title"),
              tags: {
                "test_id": "title",
              },
              widget: Some("slotted:text"),
              visible: true,
            ),
            TreeNode(
              role: Anchor,
              anchor: Some("title_end"),
              visible: false,
            ),
            TreeNode(
              role: Tabs,
              label: Some(""),
              test_id: Some("settings.tabs"),
              tags: {
                "test_id": "settings.tabs",
              },
              widget: Some("slotted:tabs"),
              visible: true,
              children: [
                TreeNode(
                  role: Panel,
                  visible: true,
                  children: [
                    TreeNode(
                      role: Tab,
                      label: Some("demo.settings.tab.display"),
                      tags: {
                        "tab": "display",
                      },
                      visible: true,
                      focused: true,
                    ),
                    TreeNode(
                      role: Tab,
                      label: Some("demo.settings.tab.audio"),
                      tags: {
                        "tab": "audio",
                      },
                      visible: true,
                    ),
                    TreeNode(
                      role: Tab,
                      label: Some("demo.settings.tab.controls"),
                      tags: {
                        "tab": "controls",
                      },
                      visible: true,
                    ),
                  ],
                ),
                TreeNode(
                  role: ScrollView,
                  test_id: Some("settings.display.page"),
                  tags: {
                    "test_id": "settings.display.page",
                  },
                  widget: Some("slotted:scroll"),
                  visible: true,
                  children: [
                    TreeNode(
                      role: Panel,
                      widget: Some("slotted:panel"),
                      visible: true,
                      children: [
                        TreeNode(
                          role: Anchor,
                          anchor: Some("settings.display.start"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Select,
                          label: Some("demo.settings.display.resolution"),
                          test_id: Some("settings.resolution"),
                          tags: {
                            "test_id": "settings.resolution",
                          },
                          widget: Some("slotted:select"),
                          visible: true,
                        ),
                        TreeNode(
                          role: Slider,
                          label: Some("demo.settings.display.ui_scale"),
                          test_id: Some("settings.ui_scale"),
                          tags: {
                            "test_id": "settings.ui_scale",
                          },
                          widget: Some("slotted:slider"),
                          visible: true,
                        ),
                        TreeNode(
                          role: Toggle,
                          label: Some("demo.settings.display.reduced_motion"),
                          test_id: Some("settings.reduced_motion"),
                          tags: {
                            "test_id": "settings.reduced_motion",
                          },
                          widget: Some("slotted:toggle"),
                          visible: true,
                        ),
                        TreeNode(
                          role: RadioGroup,
                          label: Some("demo.settings.display.colour_mode"),
                          test_id: Some("settings.colour_mode"),
                          tags: {
                            "test_id": "settings.colour_mode",
                          },
                          widget: Some("slotted:radio_group"),
                          visible: true,
                        ),
                        TreeNode(
                          role: Anchor,
                          anchor: Some("settings.display.end"),
                          visible: false,
                        ),
                      ],
                    ),
                    TreeNode(
                      role: Custom("scrollbar"),
                      visible: true,
                    ),
                  ],
                ),
                TreeNode(
                  role: ScrollView,
                  test_id: Some("settings.audio.page"),
                  tags: {
                    "test_id": "settings.audio.page",
                  },
                  widget: Some("slotted:scroll"),
                  visible: false,
                  children: [
                    TreeNode(
                      role: Panel,
                      widget: Some("slotted:panel"),
                      visible: false,
                      children: [
                        TreeNode(
                          role: Anchor,
                          anchor: Some("settings.audio.start"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Text,
                          label: Some("demo.settings.audio.volume"),
                          widget: Some("slotted:text"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Slider,
                          label: Some("demo.settings.audio.master"),
                          test_id: Some("settings.audio.master"),
                          tags: {
                            "test_id": "settings.audio.master",
                          },
                          widget: Some("slotted:slider"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Slider,
                          label: Some("demo.settings.audio.music"),
                          test_id: Some("settings.audio.music"),
                          tags: {
                            "test_id": "settings.audio.music",
                          },
                          widget: Some("slotted:slider"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Slider,
                          label: Some("demo.settings.audio.effects"),
                          test_id: Some("settings.audio.effects"),
                          tags: {
                            "test_id": "settings.audio.effects",
                          },
                          widget: Some("slotted:slider"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Decor,
                          widget: Some("slotted:separator"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Text,
                          label: Some("demo.settings.audio.output"),
                          widget: Some("slotted:text"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Select,
                          label: Some("demo.settings.audio.device"),
                          test_id: Some("settings.audio.device"),
                          tags: {
                            "test_id": "settings.audio.device",
                          },
                          widget: Some("slotted:select"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Toggle,
                          label: Some("demo.settings.audio.mute_in_background"),
                          test_id: Some("settings.audio.mute_in_background"),
                          tags: {
                            "test_id": "settings.audio.mute_in_background",
                          },
                          widget: Some("slotted:toggle"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Toggle,
                          label: Some("demo.settings.audio.subtitles"),
                          test_id: Some("settings.audio.subtitles"),
                          tags: {
                            "test_id": "settings.audio.subtitles",
                          },
                          widget: Some("slotted:toggle"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Decor,
                          widget: Some("slotted:separator"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Text,
                          label: Some("demo.settings.audio.accessibility"),
                          widget: Some("slotted:text"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Toggle,
                          label: Some("demo.settings.audio.mono"),
                          test_id: Some("settings.audio.mono"),
                          tags: {
                            "test_id": "settings.audio.mono",
                          },
                          widget: Some("slotted:toggle"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Anchor,
                          anchor: Some("settings.audio.end"),
                          visible: false,
                        ),
                      ],
                    ),
                    TreeNode(
                      role: Custom("scrollbar"),
                      visible: false,
                    ),
                  ],
                ),
                TreeNode(
                  role: ScrollView,
                  test_id: Some("settings.controls.page"),
                  tags: {
                    "test_id": "settings.controls.page",
                  },
                  widget: Some("slotted:scroll"),
                  visible: false,
                  children: [
                    TreeNode(
                      role: Panel,
                      widget: Some("slotted:panel"),
                      visible: false,
                      children: [
                        TreeNode(
                          role: Anchor,
                          anchor: Some("settings.controls.start"),
                          visible: false,
                        ),
                        TreeNode(
                          role: KeyBinding,
                          label: Some("demo.settings.controls.accept"),
                          test_id: Some("bind.keyboard.accept"),
                          tags: {
                            "test_id": "bind.keyboard.accept",
                          },
                          widget: Some("slotted:key_binding"),
                          visible: false,
                        ),
                        TreeNode(
                          role: KeyBinding,
                          label: Some("demo.settings.controls.back"),
                          test_id: Some("bind.keyboard.back"),
                          tags: {
                            "test_id": "bind.keyboard.back",
                          },
                          widget: Some("slotted:key_binding"),
                          visible: false,
                        ),
                        TreeNode(
                          role: KeyBinding,
                          label: Some("demo.settings.controls.tab_prev"),
                          test_id: Some("bind.keyboard.tab_prev"),
                          tags: {
                            "test_id": "bind.keyboard.tab_prev",
                          },
                          widget: Some("slotted:key_binding"),
                          visible: false,
                        ),
                        TreeNode(
                          role: KeyBinding,
                          label: Some("demo.settings.controls.tab_next"),
                          test_id: Some("bind.keyboard.tab_next"),
                          tags: {
                            "test_id": "bind.keyboard.tab_next",
                          },
                          widget: Some("slotted:key_binding"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Decor,
                          widget: Some("slotted:separator"),
                          visible: false,
                        ),
                        TreeNode(
                          role: TextField,
                          label: Some("demo.settings.controls.player_name"),
                          test_id: Some("settings.player_name"),
                          tags: {
                            "test_id": "settings.player_name",
                          },
                          widget: Some("slotted:text_field"),
                          visible: false,
                          children: [
                            TreeNode(
                              role: Text,
                              label: Some("demo.settings.controls.player_name"),
                              visible: false,
                            ),
                          ],
                        ),
                        TreeNode(
                          role: Text,
                          label: Some("demo.settings.footer"),
                          test_id: Some("footer_hint"),
                          tags: {
                            "test_id": "footer_hint",
                          },
                          widget: Some("slotted:rich_text"),
                          visible: false,
                        ),
                        TreeNode(
                          role: Anchor,
                          anchor: Some("settings.controls.end"),
                          visible: false,
                        ),
                      ],
                    ),
                    TreeNode(
                      role: Custom("scrollbar"),
                      visible: false,
                    ),
                  ],
                ),
              ],
            ),
            TreeNode(
              role: Decor,
              widget: Some("slotted:separator"),
              visible: true,
            ),
            TreeNode(
              role: Panel,
              test_id: Some("footer"),
              tags: {
                "test_id": "footer",
              },
              widget: Some("slotted:panel"),
              visible: true,
              children: [
                TreeNode(
                  role: Custom("hint_bar"),
                  test_id: Some("hints"),
                  tags: {
                    "test_id": "hints",
                  },
                  widget: Some("slotted:hint_bar"),
                  visible: false,
                ),
                TreeNode(
                  role: Decor,
                  widget: Some("slotted:spacer"),
                  visible: false,
                ),
                TreeNode(
                  role: Button,
                  label: Some("slotted.menu.reset"),
                  test_id: Some("reset"),
                  tags: {
                    "menu": "reset",
                    "test_id": "reset",
                  },
                  widget: Some("slotted:button"),
                  visible: true,
                ),
                TreeNode(
                  role: Button,
                  label: Some("slotted.menu.done"),
                  test_id: Some("done"),
                  tags: {
                    "test_id": "done",
                  },
                  widget: Some("slotted:close"),
                  visible: true,
                ),
              ],
            ),
          ],
        ),
      ],
    ),
    TreeNode(
      role: Carried,
      visible: true,
    ),
  ],
)
